# soupa

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: expansion.rs
tests/expand/: a.expanded.rs  a.rs  b.expanded.rs  b.rs  c.expanded.rs  c.rs  d.expanded.rs  d.rs
